--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/jaferreira/nodephantom/issues"
   },
-  "homepage": "https://github.com/jaferreira/nodephantom#readme"
+  "homepage": "https://github.com/jaferreira/nodephantom#readme",
+  "dependencies": {
+    "node-horseman": "^3.2.0"
+  }
 }
