--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/jaferreira/nodephantom#readme",
   "dependencies": {
-    "node-horseman": "^3.2.0"
+    "body-parser": "^1.15.2",
+    "node-horseman": "^3.2.0",
+    "path": "^0.12.7",
+    "url": "^0.11.0"
   }
 }
