--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.0",
     "node-horseman": "^3.2.0",
     "path": "^0.12.7",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "mongodb": "^2.2.14"
   }
 }
