--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.3",
     "express": "^4.14.0",
+    "mongodb": "^2.2.14",
+    "mongoose": "^4.7.2",
     "node-horseman": "^3.2.0",
+    "node-uuid": "^1.4.7",
     "path": "^0.12.7",
-    "url": "^0.11.0",
-    "mongodb": "^2.2.14"
+    "url": "^0.11.0"
   }
 }
